--- a/news.html
+++ b/news.html
@@ -35,7 +35,7 @@
 
 
 <link rel="icon" href="assets/images/icons/favicon.svg" type="image/gif" sizes="16x16">
-  <title>Welcome to PHNC</title>
+  <title>Welcome to </title>
 </head>
 <body class="d-flex flex-column">
 
