style andphnc modify

--- a/phnc.html
+++ b/phnc.html
@@ -15,6 +15,7 @@
   <!-- Custom Font CSS -->
   <link rel="stylesheet" href="assets/fonts/varela-font.css">
   <link rel="stylesheet" href="assets/fonts/open-sans-font.css">
+  <link rel="stylesheet" href="assets/fonts/stolzl-font/stylesheet.css">
   <link rel="stylesheet" href="assets/css/fontawesome.css">
   <!-- Animation CSS -->
   
@@ -37,7 +38,7 @@
 <body class="d-flex flex-column phnc-body-bg">
 
 
-          <header>
+           <header>
             <nav class="navbar navbar-expand-lg flex-column">
 
               <div class="top-bar">
@@ -48,7 +49,7 @@
                     </div>
                     <div class="col-md-6 right-side text-right">
                       <a href="about-us.html">About us</a>
-                      <!-- <a href="membership.html">Membership</a> -->
+                      <a href="membership.html">Membership</a>
                     </div>
                   </div>
                 </div>
@@ -66,30 +67,28 @@
                         <div class="btn-animation"></div><span class="text">Cymraeg</span>
                       </a>
                   </div>    
-                  <div class="col-md-4 center-side">
+                  <div class="col-md-4 center-side text-center">
                     <a href="index.html" class="">
-                      <img src="assets/images/logo.png">
+                      <img src="assets/images/logo.svg" class="logo">
                     </a>
                   </div>    
                   <div class="col-md-4 text-right right-side">
-                   
+                    <a href="login.html" class="link pr-2 fw-300 f-14">Login</a>
 
-                    <a href="login.html" class="link pr-2">Login</a>
-
-                      <a href="#" class="btn btn-primary">
-                        <div class="btn-animation"></div><span class="text">Logout</span>
+                      <a href="become-member.html" class="btn btn-primary">
+                        <div class="btn-animation"></div><span class="text">Become a member</span>
                       </a>
                   </div>    
                   </div>
                 </div>
               </div>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <img src="assets/images/icons/burger-menu.svg">
               </button>
 
               <div class="container-fluid fluid-space">
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                  <ul class="navbar-nav">
+                  <ul class="navbar-nav mx-auto">
                     <li class="nav-item active">
                       <a class="nav-link" href="#">Covid-19</a>
                     </li>
@@ -166,25 +165,27 @@
                       <a class="nav-link" href="news.html">News</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Events</a>
+                      <a class="nav-link" href="events.html">Events</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">E-Bulletins</a>
+                      <a class="nav-link" href="e-bulletins.html">E-Bulletins</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Webinars</a>
+                      <a class="nav-link" href="webinars.html">Webinars</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Podcasts</a>
+                      <a class="nav-link" href="podcasts.html">Podcasts</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Videos</a>
+                      <a class="nav-link" href="videos.html">Videos</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Membership</a>
+                      <a class="nav-link" href="membership.html">Membership</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link search" href="#"><i class="fas fa-search"></i></a>
+                      <a class="nav-link search" href="#">
+                        <img src="assets/images/icons/search-dark.svg" width="22">
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -209,7 +210,7 @@
                     <div class="news-list-box">
                       <div class="row">
                         <div class="col-md-8">
-                          <h1 class="primary-color fw-bold">Become a member of <br> Public Health Network Cymru</h1>
+                          <h1 class="primary-color fw-400">Become a member of <br> Public Health Network Cymru</h1>
 
                           <div class="">
                             
@@ -380,7 +381,7 @@
                         </div>
                         <div class="col-md-4">
                           <div class="blue-bg ad-4-member light-color mr-b-20 d-inline-block">
-                            <h3 class="hbecomemember">Become a member and benefit from...</h3>
+                            <h3 class="hbecomemember fw-400">Become a member and benefit from...</h3>
                             <div class="side_rws"><i class="far fa-clock fa-lg icon_mrg"></i> Early access to content</div>
                             <div class="side_rws"><i class="fas fa-user-friends fa-lg icon_mrg"></i> Connecting you to members with similar interests</div>
                             <div class="side_rws"><i class="fab fa-slideshare fa-lg icon_mrg"></i> Sharing your work with members</div>
